[FIX] Replaced deprecated annotation and duplicate function (create -> update)